test/corpus/data_directive.txt
==============================
data directive without colon
==============================

hello db 1
hello DB 100

section ".bss"
    hello1 dt 175
    hello2 dq 102.5

------------------------------

(source_file
    (data_definition (label (identifier)) (data_directive) (value))
    (data_definition (label (identifier)) (data_directive) (value))
    (section_directive)
    (data_definition (label (identifier)) (data_directive) (value))
    (data_definition (label (identifier)) (data_directive) (value)))

===============================
data directive with colon
===============================

section ".bss"
    hello1: db 1
    hello2: dt 123.5

-------------------------------

(source_file
    (section_directive)
    (data_definition (label (identifier)) (data_directive) (value))
    (data_definition (label (identifier)) (data_directive) (value)))
